# ojoie

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  readme.md
lib/: CMakeLists.txt
lib/fmod/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/ojoie/: CMakeLists.txt
lib/ojoie/Allocator/: MemoryManager.cpp
lib/ojoie/App/Views/: ImageVIew.cpp  View.cpp
lib/ojoie/Asset/: FBXImporter.cpp  TextAsset.cpp
lib/ojoie/Audio/: AudioClip.cpp  AudioManager.cpp  AudioSource.cpp  FlacFile.cpp  Mp3File.cpp  Sound.cpp  WavFile.cpp
lib/ojoie/Audio/fmod/: AudioManager.cpp
lib/ojoie/Audio/win32/: xaudio_sound.cpp
lib/ojoie/Camera/: Camera.cpp  SkyboxMesh.inl
lib/ojoie/Components/: Transform.cpp  TransformComponent.cpp
lib/ojoie/Core/: Actor.cpp  App.cpp  Behavior.cpp  Component.cpp  Configuration.cpp  DispatchQueue.cpp  Event.cpp  Exception.cpp  Game.cpp  Log.cpp  Menu.cpp  Name.cpp  Node.cpp  Screen.cpp  UUID.cpp  Window.cpp
lib/ojoie/Core/glfw/: App.cpp  Window.cpp
lib/ojoie/Core/win32/: Application.cpp  DarkMode.cpp  DarkMode.h  DragAndDrop.cpp  DragAndDropImpl.cpp  IatHook.h  Menu.cpp  Screen.cpp  UAHMenuBar.cpp  UAHMenuBar.h  Window.cpp
lib/ojoie/Editor/: Selection.cpp
lib/ojoie/Export/mono/: Core_mono.cpp  Object_mono.cpp  Utility_mono.cpp  mono.cpp
lib/ojoie/Export/ojoie-mono/: ojoie.sln
lib/ojoie/Geometry/: Cube.cpp  Plane.cpp  Sphere.cpp
lib/ojoie/HAL/: File.cpp  FileWatcher.cpp
lib/ojoie/HAL/win32/: File.cpp  FileWatcher.cpp
lib/ojoie/IMGUI/: ComboFilter.cpp  IMGUI.cpp  IMGUIManager.cpp  tweakSlider.txt
lib/ojoie/Input/: InputAction.cpp  InputBinding.cpp  InputComponent.cpp  InputControl.cpp  InputManager.cpp
lib/ojoie/Input/glfw/: InputManager.cpp  InputManager.hpp
lib/ojoie/Input/win32/: InputManager.cpp
lib/ojoie/Misc/: ResourceManager.cpp
lib/ojoie/Modules/: Dylib.cpp
lib/ojoie/Node/: CameraNode.cpp  Node2D.cpp  StaticMeshNode.cpp  StaticModelNode.cpp  TextNode.cpp
lib/ojoie/Node/shaders/: MeshNode.frag  MeshNode.vert  MeshNodeTextured.frag
lib/ojoie/Object/: Class.cpp  NamedObject.cpp  Object.cpp
lib/ojoie/Physics/: BoxCollider.cpp  Collider.cpp  MeshCollider.cpp  PhysicsManager.cpp  RigidBody.cpp
lib/ojoie/Render/: BlitCommandEncoder.cpp  Buffer.cpp  BufferManager.cpp  BufferPool.cpp  CommandBuffer.cpp  CommandPool.cpp  CommandQueue.cpp  Font.cpp  Image.cpp  IndexBuffer.cpp  Layer.cpp  LayerManager.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  PipelineReflection.cpp  QualitySettings.cpp  RenderCommandEncoder.cpp  RenderContext.cpp  RenderManager.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderPipelineState.cpp  RenderQueue.cpp  RenderTarget.cpp  Renderer.cpp  Sampler.cpp  ShaderFunction.cpp  Texture.cpp  Texture2D.cpp  TextureCube.cpp  TextureLoader.cpp  TextureManager.cpp  UniformBuffer.cpp  UniformBuffers.cpp  VertexBuffer.cpp  VertexData.cpp
lib/ojoie/Render/D3D11/: CommandBuffer.cpp  D3D11Hash.cpp  Device.cpp  Layer.cpp  RenderPipelineState.cpp  RenderTarget.cpp  RenderTypes.cpp  ShaderFunction.cpp  TextureManager.cpp  UniformBuffers.cpp  VertexBuffer.cpp  VertexInputLayouts.cpp
lib/ojoie/Render/Mesh/: Mesh.cpp  MeshRenderer.cpp  SkinnedMeshRenderer.cpp
lib/ojoie/Render/RenderLoop/: ForwardRenderLoop.cpp
lib/ojoie/Render/Shader/: Shader.cpp  ShaderCompiler.cpp
lib/ojoie/Render/opengl/: Renderer.cpp  TextureLoader.cpp
lib/ojoie/Render/vulkan/: BlitCommandEncoder.cpp  Buffer.cpp  BufferManager.cpp  BufferPool.cpp  CommandBuffer.cpp  CommandPool.cpp  CommandQueue.cpp  DescriptorSetLayout.cpp  DescriptorSetManager.cpp  Device.cpp  FrameBuffer.cpp  Image.cpp  IndexBuffer.cpp  Instance.cpp  Layer.cpp  PipelineLayout.cpp  PipelineReflection.cpp  Queue.cpp  RenderCommandEncoder.cpp  RenderFrame.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderPipelineState.cpp  RenderResourceCache.cpp  RenderTarget.cpp  RenderTypes.cpp  Renderer.cpp  Sampler.cpp  Semaphore.cpp  SemaphorePool.cpp  ShaderFunction.cpp  ShaderLibrary.cpp  ShaderProgram.cpp  SwapChain.cpp  Texture.cpp  TextureManager.cpp  UniformBuffer.cpp  UniformBuffers.cpp  VertexBuffer.cpp  hash.cpp  (+1 more)
lib/ojoie/Serialize/: FloatStringConversion.cpp  SerializeManager.cpp  SerializeTraits.cpp  SerializedAsset.cpp
lib/ojoie/Serialize/Coder/: YAMLNode.cpp  YamlDecoder.cpp  YamlEncoder.cpp
lib/ojoie/ShaderLab/: Lexer.cpp  Parser.cpp  Token.cpp
lib/ojoie/Shaders/: BlitCopy.shader  Default.shader  GUIBlit.shader  IMGUI.shader  SceneViewSelected.shader  SceneViewSelection.shader  Skybox-Procedural.shader  Skybox.shader  test.shader
lib/ojoie/Threads/: DispatchQueue.cpp  Event.cpp  Threads.cpp
lib/ojoie/UI/: Imgui.cpp  ImguiNode.cpp  imgui_impl_glfw.cpp
lib/ojoie/Utility/: Assert.cpp  Log.cpp  Path.cpp  STBTextureLoader.cpp  SourceFile.cpp  String.cpp
test/ojoie/: CMakeLists.txt  refection_test.cpp
test/ojoie/Core/: CMakeLists.txt  name_test.cpp
test/ojoie/Render/: CMakeLists.txt  shader_compile_test.cpp  shader_test.cpp
test/ojoie/ShaderLab/: CMakeLists.txt  shaderlab_lexer_test.cpp  shaderlab_parser_test.cpp
test/ojoie/Template/: CMakeLists.txt  enumerate_test.cpp  ref_count_test.cpp
test/ojoie/Threads/: CMakeLists.txt  task_test.cpp
tools/3d-test/: CMakeLists.txt  main.cpp
tools/CrashHandler/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.hpp
tools/CrashHandler/ANCrashHandler/: .gitignore  ANCrashHandler.sln
tools/fmodTest/: CMakeLists.txt  main.cpp
tools/ojoieEditor/: CMakeLists.txt  main.cpp
tools/ojoieEditor/include/: AppDelegate.hpp  EditorPanel.hpp  MainIMGUI.hpp  Picking.hpp  Selection.hpp
tools/ojoieEditor/resources/: .manifest  resource.aps  resource.h  resource.rc
tools/ojoieEditor/src/: AppDelegate.cpp  MainIMGUI.cpp  Picking.cpp  Selection.cpp
tools/some-tests/: CMakeLists.txt  fbx_test.cpp  freetype_test.cpp  mono_func_check.cpp  mono_test.cpp  yaml_test.cpp
tools/utils/ImportEditorResources/: CMakeLists.txt  main.cpp
tools/utils/RecompileBuiltinShaders/: CMakeLists.txt  main.cpp
tools/win32-test/: CMakeLists.txt  main.cpp
tools/win32-test/MonoAssembly/: MonoAssembly.sln
(+378 files in other folders)
