include(GoogleTest)
macro(add_an_test name)
    add_an_tool(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE gtest_main)
    if(VLD_MEM_CHECK)
        target_include_directories(${name} PRIVATE ${VLD_INCLUDE_DIRS})
        target_link_libraries(${name} PRIVATE ${VLD_LIBRARIES})
    endif()
    gtest_discover_tests(${name})
endmacro()

add_an_test(refection_test refection_test.cpp)
target_link_libraries(refection_test PRIVATE ojoie)

add_subdirectory(Core)
add_subdirectory(Render)
add_subdirectory(ShaderLab)
add_subdirectory(Template)
add_subdirectory(Threads)